--- a/pom.xml
+++ b/pom.xml
@@ -272,6 +272,12 @@
             <version>3.4.9</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.rabbitmq</groupId>
+            <artifactId>amqp-client</artifactId>
+            <version>4.1.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
