--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
-target
-/.idea/
-/logs/
+target/
+.idea/
+*.iml
+*.log
+.DS_Store
+Thumbs.db
+# Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
+!/.mvn/wrapper/maven-wrapper.jar
