--- a/dovefly-service/pom.xml
+++ b/dovefly-service/pom.xml
@@ -1,13 +1,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
-    <name>dovefly-service Maven service</name>
+    <name>dovefly-service</name>
     <url>http://maven.apache.org</url>
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <artifactId>dovefly</artifactId>
         <groupId>cn.dovefly</groupId>
+        <artifactId>dovefly-pom</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
