--- a/dovefly-web/pom.xml
+++ b/dovefly-web/pom.xml
@@ -1,24 +1,24 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
-    <name>dovefly-server Maven server</name>
+    <name>dovefly-web</name>
     <url>http://maven.apache.org</url>
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <artifactId>dovefly</artifactId>
         <groupId>cn.dovefly</groupId>
+        <artifactId>dovefly-pom</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>dovefly-server</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <groupId>cn.dovefly</groupId>
+    <artifactId>dovefly-web</artifactId>
     <packaging>war</packaging>
 
     <dependencies>
     </dependencies>
 
     <build>
-        <finalName>dovefly-server</finalName>
+        <finalName>dovefly-web</finalName>
     </build>
 </project>
