包路径重新规整

--- a/dovefly-core/pom.xml
+++ b/dovefly-core/pom.xml
@@ -17,4 +17,8 @@
     <artifactId>dovefly-core</artifactId>
     <packaging>jar</packaging>
 
+    <build>
+        <finalName>dovefly-core</finalName>
+    </build>
+
 </project>
