--- a/dovefly-service/pom.xml
+++ b/dovefly-service/pom.xml
@@ -18,7 +18,7 @@
     <dependencies>
         <dependency>
             <groupId>cn.dovefly</groupId>
-            <artifactId>dovefly-core</artifactId>
+            <artifactId>dovefly-orm</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
