--- a/dovefly-plugin/pom.xml
+++ b/dovefly-plugin/pom.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-    <name>dovefly-core</name>
+    <name>dovefly-plugin</name>
     <url>http://maven.apache.org</url>
     <modelVersion>4.0.0</modelVersion>
 
@@ -14,11 +14,11 @@
     </parent>
 
     <groupId>cn.dovefly</groupId>
-    <artifactId>dovefly-core</artifactId>
+    <artifactId>dovefly-plugin</artifactId>
     <packaging>jar</packaging>
 
     <build>
-        <finalName>dovefly-core</finalName>
+        <finalName>dovefly-plugin</finalName>
     </build>
 
 </project>
