--- a/dovefly-generator-maven-plugin/pom.xml
+++ b/dovefly-generator-maven-plugin/pom.xml
@@ -28,5 +28,19 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>2.3.23</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.xiaokakeji</groupId>
+            <artifactId>repoHelper</artifactId>
+            <scope>system</scope>
+            <version>0.0.1</version>
+            <systemPath>${basedir}/src/main/resources/lib/repoHelper.jar</systemPath>
+        </dependency>
+
     </dependencies>
 </project>
